Fixed layout break issues on error text

--- a/web/rainmaker/packages/employee/src/modules/employee/pgr/CreateComplaint/index.scss
+++ b/web/rainmaker/packages/employee/src/modules/employee/pgr/CreateComplaint/index.scss
@@ -16,3 +16,8 @@
   padding-bottom: 0 !important;
   max-height: calc(100vh - 140px);
 }
+
+.fix-for-layout-break {
+  margin-bottom: 10px;
+  position: relative;
+}
